# erpc

./: .clang-format  .clang-format-ignore  .gitignore  .gitpod.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Kconfig  LICENSE  Makefile  README.md  SBOM.spdx.json  SCR.txt  compile_tests.sh  generate_erpc_files.cmake  install_dependencies.ps1  install_dependencies.sh  prj.conf  run_clang_format.py  run_tests.sh
erpc_c/: CMakeLists.txt  Makefile  README.md  erpc_c_sources.cmake  readme.txt
erpc_c/config/: CMakeLists.txt  config.dox  erpc_config.h
erpc_c/infra/: CMakeLists.txt  arbitrated_client_manager.cpp  arbitrated_client_manager.h  basic_codec.cpp  basic_codec.h  client_manager.cpp  client_manager.h  codec.h  crc16.cpp  crc16.h  erpc_arbitrated_client_manager.cpp  erpc_arbitrated_client_manager.h  erpc_arbitrated_client_manager.hpp  erpc_basic_codec.cpp  erpc_basic_codec.h  erpc_basic_codec.hpp  erpc_client_manager.cpp  erpc_client_manager.h  erpc_client_server_common.h  erpc_client_server_common.hpp  erpc_codec.h  erpc_codec.hpp  erpc_common.h  erpc_crc16.cpp  erpc_crc16.h  erpc_crc16.hpp  erpc_framed_transport.cpp  erpc_framed_transport.h  erpc_framed_transport.hpp  erpc_manually_constructed.h  erpc_manually_constructed.hpp  erpc_message_buffer.cpp  erpc_message_buffer.h  erpc_message_buffer.hpp  erpc_message_loggers.cpp  erpc_message_loggers.h  erpc_message_loggers.hpp  erpc_pre_post_action.cpp  erpc_pre_post_action.h  erpc_server.cpp  (+31 more)
erpc_c/port/: CMakeLists.txt  erpc_config_internal.h  erpc_endianness_agnostic_example.h  erpc_endianness_undefined.h  erpc_port.h  erpc_port_freertos.cpp  erpc_port_mbed.cpp  erpc_port_memmanager.cpp  erpc_port_mqx.cpp  erpc_port_stdlib.cpp  erpc_port_threadx.cpp  erpc_port_zephyr.cpp  erpc_serial.cpp  erpc_serial.h  erpc_setup_extensions.h  erpc_setup_extensions_freertos.cpp  erpc_spidev.cpp  erpc_spidev.h  erpc_sysgpio.c  erpc_sysgpio.h  erpc_threading.h  erpc_threading_freertos.cpp  erpc_threading_mbed.cpp  erpc_threading_pthreads.cpp  erpc_threading_threadx.cpp  erpc_threading_win32.cpp  erpc_threading_zephyr.cpp  port.dox  serial.cpp  serial.h
erpc_c/setup/: CMakeLists.txt  erpc_arbitrated_client_setup.cpp  erpc_arbitrated_client_setup.h  erpc_client_setup.cpp  erpc_client_setup.h  erpc_mbf_setup.h  erpc_server_setup.cpp  erpc_server_setup.h  erpc_setup.h  erpc_setup_dspi_master.cpp  erpc_setup_dspi_slave.cpp  erpc_setup_i2c_slave.cpp  erpc_setup_lpi2c_slave.cpp  erpc_setup_lpspi_slave.cpp  erpc_setup_lpuart.cpp  erpc_setup_lwip_tcp.cpp  erpc_setup_mbf_dynamic.cpp  erpc_setup_mbf_ipc_service.cpp  erpc_setup_mbf_rpmsg.cpp  erpc_setup_mbf_rpmsg_tty.cpp  erpc_setup_mbf_rpmsg_zc.cpp  erpc_setup_mbf_static.cpp  erpc_setup_mbf_static_fixed.h  erpc_setup_mbox_zephyr.cpp  erpc_setup_mu.cpp  erpc_setup_rpmsg.cpp  erpc_setup_rpmsg_linux.cpp  erpc_setup_rpmsg_lite_master.cpp  erpc_setup_rpmsg_lite_remote.cpp  erpc_setup_rpmsg_lite_rtos_master.cpp  erpc_setup_rpmsg_lite_rtos_remote.cpp  erpc_setup_rpmsg_lite_zc_master.cpp  erpc_setup_rpmsg_lite_zc_remote.cpp  erpc_setup_rpmsg_lite_zc_rtos_master.cpp  erpc_setup_rpmsg_lite_zc_rtos_remote.cpp  erpc_setup_rpmsg_rtos.cpp  erpc_setup_rpmsg_tty_rtos_remote.cpp  erpc_setup_serial.cpp  erpc_setup_spi_master.cpp  erpc_setup_spi_master_espidf.cpp  (+13 more)
erpc_c/transports/: CMakeLists.txt  dspi_master_transport.cpp  dspi_master_transport.h  dspi_slave_transport.cpp  dspi_slave_transport.h  erpc_dspi_master_transport.cpp  erpc_dspi_master_transport.h  erpc_dspi_master_transport.hpp  erpc_dspi_slave_transport.cpp  erpc_dspi_slave_transport.h  erpc_dspi_slave_transport.hpp  erpc_i2c_slave_transport.cpp  erpc_i2c_slave_transport.h  erpc_i2c_slave_transport.hpp  erpc_inter_thread_buffer_transport.cpp  erpc_inter_thread_buffer_transport.h  erpc_inter_thread_buffer_transport.hpp  erpc_ipc_service_zephyr_transport.cpp  erpc_ipc_service_zephyr_transport.hpp  erpc_lpi2c_slave_transport.cpp  erpc_lpi2c_slave_transport.hpp  erpc_lpspi_slave_transport.cpp  erpc_lpspi_slave_transport.hpp  erpc_lwip_tcp_transport.cpp  erpc_lwip_tcp_transport.hpp  erpc_mbox_zephyr_transport.cpp  erpc_mbox_zephyr_transport.hpp  erpc_mu_transport.cpp  erpc_mu_transport.h  erpc_mu_transport.hpp  erpc_rpmsg_linux_endpoint.cpp  erpc_rpmsg_linux_endpoint.h  erpc_rpmsg_linux_transport.cpp  erpc_rpmsg_linux_transport.h  erpc_rpmsg_linux_transport.hpp  erpc_rpmsg_lite_base.hpp  erpc_rpmsg_lite_base_transport.h  erpc_rpmsg_lite_base_transport.hpp  erpc_rpmsg_lite_rtos_transport.cpp  erpc_rpmsg_lite_rtos_transport.h  (+74 more)
erpc_rust/: Cargo.toml  README_rust.md
erpc_rust/src/: auxiliary.rs  basic_codec.rs  client.rs  codec.rs  error.rs  lib.rs  message_type.rs  server.rs  simple_server.rs  transport.rs
erpc_rust/tests/: client_server_integration.rs  integration_tests.rs
erpcgen_rust/: Cargo.toml  README.md  askama.toml
erpcgen_rust/src/: main.rs  options.rs
examples/: CMakeLists.txt  README.md  config.h  config.py  smac.erpc  temp_alarm.erpc
examples/MCUXPRESSO_SDK/: Kconfig  erpc_error_handler.cpp  erpc_examples.cmake
examples/ble/: ble_common.erpc  ble_gap.erpc  ble_gatt.erpc  bluetooth.erpc
examples/cmake_example/: CMakeLists.txt  erpc_config.h  hello_world.erpc  main.c
examples/hello_world/: CMakeLists.txt  README.md  hello_world.erpc
examples/idl/: temp_alarm.erpc
examples/linux_demo/: Makefile  erpcdemo.erpc  test_client.c  test_server.c
examples/matrix_multiply_c/: CMakeLists.txt  main_client.c  main_client.cpp  main_server.c  main_server.cpp
examples/matrix_multiply_cpp/: CMakeLists.txt
examples/matrix_multiply_java/: README.md  pom.xml  readme.md
examples/matrix_multiply_python/: matrix_multiply.py  readme.md
examples/matrix_multiply_tcp_c/: CMakeLists.txt  README.md  erpc_matrix_multiply.erpc  main_client.c  main_client.cpp  main_server.c  main_server.cpp
examples/rust_matrix_multiply/: Cargo.toml  (+1 more)
test/: .gitignore  CMakeLists.txt  Makefile  README.md  arithmetic.erpc  conftest.py  generate_erpc.rb  prj.conf  pytest.ini  readme.txt  run_unit_tests.py  test.cmake  variables.cmake
(+4615 files in other folders)
